--- a/SnowmassStyle/Computing/I4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I4-executiveSummary.tex
@@ -9,15 +9,15 @@ we have identified the following main goals for the next decade in the area
 of software, staffing and training:
 
 \begin{itemize}
-\item Goal: To maximize the scientific productivity of our community
-in an era of reduced resources, we must use
+\item Maximize the scientific productivity of our community
+in an era of reduced resources, by using
 software development strategies and staffing models that will result in products
-that are generally useful for the wider HEP community.
-\item Goal: We must respond to the evolving technology market, especially
+that are useful for the wider HEP community.
+\item Respond to the evolving technology market, especially
 with respect to computer processors, by
 developing and evolving software that will perform with optimal efficiency
 in future computing systems.
-\item Goal: We must insure that our developers and users will have the
+\item Insure that our developers and users will have the
 training needed to create, maintain, and use the increasingly complex software
 environments and computing systems that will be part of future HEP projects.
 \end{itemize}
@@ -25,28 +25,29 @@ environments and computing systems that will be part of future HEP projects.
 Some specific recommendations we feel will help achieve these goals are:
 
 \begin{itemize}
-    \item Software Management, Toolkits and Reuse
+    \item Software management, toolkits and reuse
     \begin{itemize}
         \item Continue to support established toolkits (Geant4, ROOT, ...)
         \item Encourage the creation of new toolkits from existing successful common software (generators, tracking, ...)
         \item  Allow flexible funding of software experts to facilitate transfer of software and sharing of technical expertise between projects
         \item Facilitate code sharing through open-source licensing and use of publicly-readable repositories.
-        \item Consolidate and standardize software management tools to minimize cross-experimental "friction"
+        \item Consolidate and standardize software management tools to ease
+migration of people from one project to another
     \end{itemize}
 
-    \item Software Development for new Hardware Architectures
+    \item Software development for new hardware architectures
     \begin{itemize}
-        \item Significant investments in software are needed to adapt to the evolution of computing processors, both as basic R\&D into appropriate
-techniques and as re-engineering "upgrades"
-        \item New software should be designed, and existing software rengineered, to expose parallelism at multiple levels
-        \item Develop flexible software architectures that can exploit efficiently a variety of possible future hardware options
+        \item Invest in software needed to adapt to the evolution of computing processors, both as basic R\&D into appropriate
+techniques and as re-engineering ``upgrades''
+        \item Designe new software and reengineer existing software to expose parallelism at multiple levels
+        \item Develop flexible software architectures that can efficiently exploit a variety of possible future hardware options
     \end{itemize}    
 
     \item Staffing
       \begin{itemize}
-          \item Recognize software efforts as sub-projects of the experiment
-          \item Integrate computing professionals as part of the experimental team, over the life of the experiment
-          \item Integrate software professionals with scientist developers to insure software meets both the technical and physics performance needs of the experiment
+          \item Recognize software efforts as sub-projects of the project
+          \item Integrate computing professionals as part of the project team, over the life of the project or collaboration
+          \item Integrate software professionals with scientist developers to insure software meets both the technical and scientific needs of the project
       \end{itemize}
 
     \item Training
@@ -61,3 +62,4 @@ techniques and as re-engineering "upgrades"
     \end{itemize}
 
 \end{itemize}
+
