Accommodated many of Julia's requests, but not others.

--- a/SnowmassStyle/Computing/I5-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I5-executiveSummary.tex
@@ -1,7 +1,7 @@
 \section{Storage and Data Management}
 
 
-The largest HEP experiments have developed and are improving
+The largest HEP experiments have developed, and are improving,
 functional distributed data and workflow management systems meeting
 their needs. These systems are expensive to develop and operate and
 are thus  rarely appropriate for smaller experiments.
@@ -17,12 +17,12 @@ HEP should maintain and promote a vision of the future  in which fully
 functional and low-operational-cost distributed computing and
 persistency management is supported by software that is widely used in
 data-intensive science.  To this end, developments in industry and the
-wider  science community should be monitored actively, HEP should work
+wider  science community should be monitored actively. HEP should work
 with the wider  science and computer science community to export and
 adapt HEP technologies and  vice-versa. In distributed computing, HEP
 should organize itself to significantly  reduce the number of diverse
-approaches and provide the benefits of ideas and  software developed
-in the largest experiments to other activities where they are needed.
+approaches and share the ideas and  software developed
+in the largest experiments with other activities where they are needed.
 
 Rotating disk storage will suffer a marked slowdown in the  evolution
 of capacity/cost.  This may be the largest perturbation of HEP
@@ -44,10 +44,10 @@ All experiments across all frontiers
 need  infrastructure that will allow scientists to store, catalog,
 access, and  reprocess datasets years after the original physics
 results are produced.  The inherent similarity of the requirements
-across experiments and disciplines  call for a coordinated investment
+across experiments and disciplines  calls for a coordinated investment
 in common infrastructure to enable easy  access and adoption of best
 practices in knowledge preservation.  Solutions  should be developed
-that meet the needs of the particle and astrophysics  communities
+that meet the needs of the particle physics and astrophysics  communities
 before widespread release of data to the public can be expected  or
 mandated.
 
